--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <p>Обратитесь в поддержку через любой удобный сервис</p>
       
             <div class="support-image-wrapper">
-              <img src="/Home/img/blur.png"class="img-support" alt="">
+              <img src="https://github.com/nidevseek/sraki.ovn/blob/main/Home/img/blur.png?raw=true"class="img-support" alt="">
               <div class="support-button" style="top: 25%; left: 80%;">
                 <a href="#">
                 <span>Discord</span>
