--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>auroxe - лучший хостинг веб услуг!</title>
+    <title>Sraki.ovh - Бесплатный Хостинг</title>
+    <meta name="description" content="Sraki.ovh предлагает полностью бесплатный хостинг с мощными нодами в Европе, низкой задержкой и надежной DDoS-защитой.">
+    <meta name="keywords" content="бесплатный хостинг, хостинг, sraki.ovh, ddos защита, низкий пинг, vps, vds">
+    <meta property="og:title" content="Sraki.ovh - Бесплатный и Мощный Хостинг">
+    <meta property="og:description" content="Надежный хостинг в Европе с DDoS защитой. Абсолютно бесплатно.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://sraki.ovh">
+    
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Home/UI/styles.css" />
 </head>
