--- a/index.html
+++ b/index.html
@@ -89,6 +89,37 @@
                     <p>Наша команда поддержки оперативно решит любые вопросы и подскажет лучшее решение.</p>
                 </div>
             </div>
+            <div class="feature-card">
+                <div class="feature-icon">
+                    <!-- Иконка планеты 🌍 -->
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+                        <path d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm0 18c-4.418 0-8-3.582-8-8 0-1.657.504-3.193 1.355-4.452l11.097 11.097A7.952 7.952 0 0112 20z" fill="currentColor"/>
+                    </svg>
+                </div>
+                <h3>Ноды в Европе</h3>
+                <p>Наши серверы расположены в ключевых точках Европы для максимальной скорости и доступности.</p>
+            </div>
+            <div class="feature-card">
+                <div class="feature-icon">
+                    <!-- Иконка молнии ⚡️ -->
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+                        <path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z" fill="currentColor"/>
+                    </svg>
+                </div>
+                <h3>Низкий Пинг</h3>
+                <p>Оптимизированная сеть гарантирует минимальную задержку для ваших проектов и игровых серверов.</p>
+            </div>
+            <div class="feature-card">
+                <div class="feature-icon">
+                    <!-- Иконка щита 🛡️ -->
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+                        <path d="M12 2l7 4v6c0 5-3 9-7 10-4-1-7-5-7-10V6l7-4z" fill="currentColor"/>
+                    </svg>
+                </div>
+                <h3>DDoS Защита</h3>
+                <p>Надежная защита от всех типов DDoS-атак обеспечивает стабильную работу ваших сервисов 24/7.</p>
+            </div>
+        </div>
         </div>
     </section>
 
