--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
                 </div>
             </a>
             <div class="nav-links">
-                <a href="#" class="nav-link">Главная</a>
                 <a href="#tariffs" class="nav-link">Тарифы</a>
                 <a href="https://status.sraki.ovh/" class="nav-link">Статус</a>
                 <a href="https://discord.gg/ZfM5MG7TxF" class="nav-link">Поддержка</a>
@@ -60,7 +59,6 @@
                 <h2>Почему <span>мы</span>?</h2>
             </div>
             <div class="features-grid">
-                <!-- Упрощенная и корректная структура карточек -->
                 <div class="feature-card">
                     <div class="feature-icon">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -137,7 +135,7 @@
     <section id="support" class="support">
         <div class="container">
             <div class="support-bg">
-                <img src="Home/img/blur-left.png" class="bg-support" alt="">
+                <img src="https://nidevseek.github.io/sraki.ovn/Home/img/blur-left.png" class="bg-support" alt="">
             </div>
             <div class="support-content">
                 <div class="section-title">
