--- a/index.html
+++ b/index.html
@@ -135,9 +135,6 @@
                 <div class="location-block">
                     <img class="country-icon" src="https://img.icons8.com/emoji/48/germany-emoji.png" />Германия
                 </div>
-                <div class="location-block">
-                    <img class="country-icon" src="https://img.icons8.com/emoji/48/united-kingdom-emoji.png" />Великобритания
-                </div>
             </div>
         </div>
     </section>
@@ -190,6 +187,114 @@
                 </div>
                 <div class="tariff-spec">
                     5 ports
+                </div>
+                <div class="tariff-spec">
+                    0 backup
+                </div>
+                <div class="tariff-spec">
+                    DDoS protection
+                </div>
+              </div>
+                <div class="tariff-card">
+                <div class="section-title">Game-null</div>
+                <div class="tariff-spec">
+                    0.5% CPU
+                </div>
+                <div class="tariff-spec">
+                    1.5GB DDR4
+                </div>
+                <div class="tariff-spec">
+                    8GB NVMe
+                </div>
+                <div class="tariff-spec">
+                    10 ports
+                </div>
+                <div class="tariff-spec">
+                    10 backup
+                </div>
+                <div class="tariff-spec">
+                    DDoS protection
+                </div>
+              </div>
+                <div class="tariff-card">
+                <div class="section-title">Game-mini</div>
+                <div class="tariff-spec">
+                    1% CPU
+                </div>
+                <div class="tariff-spec">
+                    3GB DDR4
+                </div>
+                <div class="tariff-spec">
+                    10GB NVMe
+                </div>
+                <div class="tariff-spec">
+                    10 ports
+                </div>
+                <div class="tariff-spec">
+                    10 backup
+                </div>
+                <div class="tariff-spec">
+                    DDoS protection
+                </div>
+              </div>
+                <div class="tariff-card">
+                <div class="section-title">Game-base</div>
+                <div class="tariff-spec">
+                    1.75% CPU
+                </div>
+                <div class="tariff-spec">
+                    6GB DDR4
+                </div>
+                <div class="tariff-spec">
+                    20GB NVMe
+                </div>
+                <div class="tariff-spec">
+                    10 ports
+                </div>
+                <div class="tariff-spec">
+                    10 backup
+                </div>
+                <div class="tariff-spec">
+                    DDoS protection
+                </div>
+              </div>
+                <div class="tariff-card">
+                <div class="section-title">Game-core</div>
+                <div class="tariff-spec">
+                    2.5% CPU
+                </div>
+                <div class="tariff-spec">
+                    9GB DDR4
+                </div>
+                <div class="tariff-spec">
+                    35GB NVMe
+                </div>
+                <div class="tariff-spec">
+                    10 ports
+                </div>
+                <div class="tariff-spec">
+                    10 backup
+                </div>
+                <div class="tariff-spec">
+                    DDoS protection
+                </div>
+              </div>
+            <div class="tariff-card">
+                <div class="section-title">Game-prime</div>
+                <div class="tariff-spec">
+                    3% CPU
+                </div>
+                <div class="tariff-spec">
+                    12GB DDR4
+                </div>
+                <div class="tariff-spec">
+                    40GB NVMe
+                </div>
+                <div class="tariff-spec">
+                    10 ports
+                </div>
+                <div class="tariff-spec">
+                    10 backup
                 </div>
                 <div class="tariff-spec">
                     DDoS protection
