--- a/index.html
+++ b/index.html
@@ -152,9 +152,12 @@
           </div>
       
           <div class="tariffs-container-wrapper">
+            <div class="parent">
+            <div class="other">Коины - валюта на сайте, их можно получить только с промокодов в <a href="https://discord.gg/ZfM5MG7TxF">дискорде</a> хостинга!</div>
+        </div>
             <div class="tariffs-container tab-content" id="coding">
               <div class="tariff-card">
-                <div class="section-title">Free-code</div>
+                <div class="section-title">Code-free</div>
                 <div class="tariff-spec">
                     0.75% CPU
                 </div>
@@ -168,14 +171,96 @@
                     5 ports
                 </div>
                 <div class="tariff-spec">
+                    0 backup
+                </div>
+                <div class="tariff-spec">
                     DDoS protection
                 </div>
+                <div class="buy">
+                    0 / месяц
+                </div>
               </div>
+
+              <div class="tariff-card">
+                <div class="section-title">Code-start</div>
+                <div class="tariff-spec">
+                    0.7% CPU
+                </div>
+                <div class="tariff-spec">
+                    1GB DDR4
+                </div>
+                <div class="tariff-spec">
+                    10GB NVMe
+                </div>
+                <div class="tariff-spec">
+                    10 ports
+                </div>
+                <div class="tariff-spec">
+                    10 backup
+                </div>
+                <div class="tariff-spec">
+                    DDoS protection
+                </div>
+                <div class="buy">
+                    1.00 $ коинов / месяц
+                </div>
+              </div>
+
+              <div class="tariff-card">
+                <div class="section-title">Code-base</div>
+                <div class="tariff-spec">
+                    1.3% CPU
+                </div>
+                <div class="tariff-spec">
+                    4GB DDR4
+                </div>
+                <div class="tariff-spec">
+                    15GB NVMe
+                </div>
+                <div class="tariff-spec">
+                    10 ports
+                </div>
+                <div class="tariff-spec">
+                    10 backup
+                </div>
+                <div class="tariff-spec">
+                    DDoS protection
+                </div>
+                <div class="buy">
+                    2.00 $ коинов / месяц
+                </div>
+              </div>
+
+              <div class="tariff-card">
+                <div class="section-title">Code-base</div>
+                <div class="tariff-spec">
+                    2.2% CPU
+                </div>
+                <div class="tariff-spec">
+                    6GB DDR4
+                </div>
+                <div class="tariff-spec">
+                    30GB NVMe
+                </div>
+                <div class="tariff-spec">
+                    10 ports
+                </div>
+                <div class="tariff-spec">
+                    10 backup
+                </div>
+                <div class="tariff-spec">
+                    DDoS protection
+                </div>
+                <div class="buy">
+                    3.50 $ коинов / месяц
+                </div>
+              </div>
+
             </div>
       
             <div class="tariffs-container tab-content active" id="minecraft">
               <div class="tariff-card">
-                <div class="section-title">Free-game</div>
+                <div class="section-title">Game-free</div>
                 <div class="tariff-spec">
                     1.75% CPU
                 </div>
@@ -193,6 +278,9 @@
                 </div>
                 <div class="tariff-spec">
                     DDoS protection
+                </div>
+                <div class="buy">
+                    0 / месяц
                 </div>
               </div>
                 <div class="tariff-card">
@@ -215,7 +303,10 @@
                 <div class="tariff-spec">
                     DDoS protection
                 </div>
-              </div>
+                <div class="buy">
+                    0.40 $ коинов / месяц
+                </div>
+            </div>
                 <div class="tariff-card">
                 <div class="section-title">Game-mini</div>
                 <div class="tariff-spec">
@@ -235,6 +326,9 @@
                 </div>
                 <div class="tariff-spec">
                     DDoS protection
+                </div>
+                <div class="buy">
+                    1.00 $ коинов / месяц
                 </div>
               </div>
                 <div class="tariff-card">
@@ -257,6 +351,9 @@
                 <div class="tariff-spec">
                     DDoS protection
                 </div>
+                <div class="buy">
+                    2.10 $ коинов / месяц
+                </div>
               </div>
                 <div class="tariff-card">
                 <div class="section-title">Game-core</div>
@@ -278,6 +375,9 @@
                 <div class="tariff-spec">
                     DDoS protection
                 </div>
+                <div class="buy">
+                    3.20 $ коинов / месяц
+                </div>
               </div>
             <div class="tariff-card">
                 <div class="section-title">Game-prime</div>
@@ -298,6 +398,9 @@
                 </div>
                 <div class="tariff-spec">
                     DDoS protection
+                </div>
+                <div class="buy">
+                    4.80 $ коинов / месяц
                 </div>
               </div>
             </div>
